# Geometry-Dash-Multiplayer-X

./: .clang-format  .gitmodules  CMakeAndroidPresets.json  CMakeLists.txt  CMakePresets.json  CMakeWindowsPresets.json  LICENSE  README.md  about.md  mod.json  push.py
headers/: gdmx_manager.h  lobby_cell.h  lobby_info.h  macros.h  settings_popup.h
include/: easywsclient.hpp
src/: gdmx_manager.cpp  lobby_cell.cpp  main.cpp  settings_popup.cpp
